TRN-1060 WIP. revising components.html

--- a/docs/_includes/components/badges.html
+++ b/docs/_includes/components/badges.html
@@ -1,5 +1,5 @@
-<div class="box">
-  <h1 id="badges">Badges</h1>
+<div id="badges" class="box">
+  <h1>Badges</h1>
   <hr/>
 
   <div class="bs-example">
