--- a/docs/_includes/components/breadcrumb.html
+++ b/docs/_includes/components/breadcrumb.html
@@ -1,5 +1,5 @@
-<div class="box">
-  <h1 id="breadcrumb">Breadcrumb</h1>
+<div id="breadcrumb" class="box">
+  <h1>Breadcrumb</h1>
   <hr/>
 
   <ol class="breadcrumb">
