--- a/docs/_includes/components/buttons-groups.html
+++ b/docs/_includes/components/buttons-groups.html
@@ -1,5 +1,5 @@
-<div class="box">
-  <h1 id="buttons-groups">Buttons groups</h1>
+<div id="buttons-groups" class="box">
+  <h1>Buttons groups</h1>
   <hr/>
 
   <h2>Basic example</h2>
