--- a/docs/_includes/components/buttons.html
+++ b/docs/_includes/components/buttons.html
@@ -1,5 +1,5 @@
-<div class="box">
-  <h1 id="buttons">Buttons</h1>
+<div id="buttons" class="box">
+  <h1>Buttons</h1>
   <hr/>
   <h3>Options</h3>
   <div class="style-example">
