--- a/docs/_includes/components/control-sizing.html
+++ b/docs/_includes/components/control-sizing.html
@@ -1,5 +1,5 @@
-<div class="box">
-  <h1 id="control-sizing">Control sizing</h1>
+<div id="control-sizing" class="box">
+  <h1>Control sizing</h1>
   <hr/>
 
   <h2>Height</h2>
