--- a/docs/_includes/components/dropdowns.html
+++ b/docs/_includes/components/dropdowns.html
@@ -1,5 +1,5 @@
-<div class="box">
-  <h1 id="dropdowns">Dropdowns</h1>
+<div id="dropdowns" class="box">
+  <h1>Dropdowns</h1>
   <hr/>
 
   <p>Toggleable, contextual menu for displaying lists of links. Made interactive with the dropdown JavaScript plugin.</p>
