--- a/docs/_includes/components/editable-text.html
+++ b/docs/_includes/components/editable-text.html
@@ -1,5 +1,5 @@
-<div class="box">
-  <h1 id="editable-text">Editable text</h1>
+<div id="editable-text" class="box">
+  <h1>Editable text</h1>
   <hr>
 
   <h2>simple text field </h2>
