--- a/docs/_includes/components/helper-classes.html
+++ b/docs/_includes/components/helper-classes.html
@@ -1,5 +1,5 @@
-<div class="box helper-classes">
-  <h1 id="helper-classes">Helper classes</h1>
+<div id="helper-classes" class="box helper-classes">
+  <h1>Helper classes</h1>
   <hr/>
 
   <h2>Close icon</h2>
