--- a/docs/_includes/components/labels.html
+++ b/docs/_includes/components/labels.html
@@ -1,5 +1,5 @@
-<div class="box labels-example">
-  <h1 id="labels">Labels</h1>
+<div id="labels" class="box labels-example">
+  <h1>Labels</h1>
   <hr/>
   <div class="bs-example">
     <h1>Example Heading <span class="label label-default">New</span></h1>
