--- a/docs/_includes/components/navs.html
+++ b/docs/_includes/components/navs.html
@@ -1,165 +1,164 @@
-<div class="box">
-  <h1 id="navs">Navs</h1>
+<div id="navs" class="box">
+  <h1>Navs</h1>
   <hr/>
 
   <h2>Tabs</h2>
   <ul class="nav nav-tabs">
-    <li class="active"><a href="#">Home</a></li>
-    <li><a href="#">Profile</a></li>
-    <li><a href="#">Messages</a></li>
+    <li class="nav-item"><a class="nav-link active" aria-current="page" href="#top">Home</a></li>
+    <li class="nav-item"><a class="nav-link" href="#">Profile</a></li>
+    <li class="nav-item"><a class="nav-link" href="#">Messages</a></li>
   </ul>
   <br>
 {% highlight html %}
 <ul class="nav nav-tabs">
-  <li class="active"><a href="#">Home</a></li>
-  <li><a href="#">Profile</a></li>
-  <li><a href="#">Messages</a></li>
+  <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+  <li class="nav-item"><a class="nav-link" href="#">Profile</a></li>
+  <li class="nav-item"><a class="nav-link" href="#">Messages</a></li>
 </ul>
 {% endhighlight %}
 
-
   <h2>Pills</h2>
   <ul class="nav nav-pills">
-    <li class="active"><a href="#">Home</a></li>
-    <li><a href="#">Profile</a></li>
-    <li><a href="#">Messages</a></li>
+    <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
+    <li class="nav-item"><a class="nav-link" href="#">Profile</a></li>
+    <li class="nav-item"><a class="nav-link" href="#">Messages</a></li>
   </ul>
   <br>
 {% highlight html %}
 <ul class="nav nav-pills">
-  <li class="active"><a href="#">Home</a></li>
-  <li><a href="#">Profile</a></li>
-  <li><a href="#">Messages</a></li>
+  <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+  <li class="nav-item"><a class="nav-link" href="#">Profile</a></li>
+  <li class="nav-item"><a class="nav-link" href="#">Messages</a></li>
 </ul>
 {% endhighlight %}
 
   <h2>Stacked Pills</h2>
-  <ul class="nav nav-pills nav-stacked">
-    <li class="active"><a href="#">Home</a></li>
-    <li><a href="#">Profile</a></li>
-    <li><a href="#">Messages</a></li>
+  <ul class="nav nav-pills ge-nav-stacked flex-column">
+    <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+    <li class="nav-item"><a class="nav-link" href="#">Profile</a></li>
+    <li class="nav-item"><a class="nav-link" href="#">Messages</a></li>
   </ul>
 <br>
 {% highlight html %}
-<ul class="nav nav-pills nav-stacked">
-  <li class="active"><a href="#">Home</a></li>
-  <li><a href="#">Profile</a></li>
-  <li><a href="#">Messages</a></li>
+<ul class="nav nav-pills ge-nav-stacked flex-column">
+  <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+  <li class="nav-item"><a class="nav-link" href="#">Profile</a></li>
+  <li class="nav-item"><a class="nav-link" href="#">Messages</a></li>
 </ul>
 {% endhighlight %}
 
   <h2>Justified</h2>
   <ul class="nav nav-tabs nav-justified">
-    <li class="active"><a href="#">Home</a></li>
-    <li><a href="#">Profile</a></li>
-    <li><a href="#">Messages</a></li>
+    <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+    <li class="nav-item"><a class="nav-link" href="#">Profile</a></li>
+    <li class="nav-item"><a class="nav-link" href="#">Messages</a></li>
   </ul>
   <br>
 {% highlight html %}
 <ul class="nav nav-tabs nav-justified">
-  <li class="active"><a href="#">Home</a></li>
-  <li><a href="#">Profile</a></li>
-  <li><a href="#">Messages</a></li>
+  <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+  <li class="nav-item"><a class="nav-link" href="#">Profile</a></li>
+  <li class="nav-item"><a class="nav-link" href="#">Messages</a></li>
 </ul>
 {% endhighlight %}
   <br />
   <ul class="nav nav-pills nav-justified">
-    <li class="active"><a href="#">Home</a></li>
-    <li><a href="#">Profile</a></li>
-    <li><a href="#">Messages</a></li>
+    <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+    <li class="nav-item"><a class="nav-link" href="#">Profile</a></li>
+    <li class="nav-item"><a class="nav-link" href="#">Messages</a></li>
   </ul>
   <br>
 {% highlight html %}
 <ul class="nav nav-pills nav-justified">
-  <li class="active"><a href="#">Home</a></li>
-  <li><a href="#">Profile</a></li>
-  <li><a href="#">Messages</a></li>
+  <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+  <li class="nav-item"><a class="nav-link" href="#">Profile</a></li>
+  <li class="nav-item"><a class="nav-link" href="#">Messages</a></li>
 </ul>
 {% endhighlight %}
 
   <h2>Disabled links</h2>
   <ul class="nav nav-pills">
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Profile</a></li>
-    <li class="disabled"><a href="#">Messages</a></li>
+    <li class="nav-item"><a class="nav-link"  href="#">Home</a></li>
+    <li class="nav-item"><a class="nav-link" href="#">Profile</a></li>
+    <li class="nav-item"><a class="nav-link disabled" href="#">Messages</a></li>
   </ul>
   <br>
 {% highlight html %}
 <ul class="nav nav-pills">
-  <li><a href="#">Home</a></li>
-  <li><a href="#">Profile</a></li>
-  <li class="disabled"><a href="#">Messages</a></li>
+  <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+  <li class="nav-item"><a class="nav-link" href="#">Profile</a></li>
+  <li class="nav-item"><a class="nav-link disabled"  href="#">Messages</a></li>
 </ul>
 {% endhighlight %}
 
   <h2>Using Dropdown</h2>
   <ul class="nav nav-tabs">
-    <li class="active"><a href="#">Home</a></li>
-    <li><a href="#">Profile</a></li>
-    <li class="dropdown">
-      <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+    <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+    <li class="nav-item"><a class="nav-link" href="#">Profile</a></li>
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" href="#">
         Messages <span class="caret"></span>
       </a>
       <ul class="dropdown-menu" role="menu">
-        <li><a href="#">Action</a></li>
-        <li><a href="#">Another action</a></li>
-        <li><a href="#">Something else here</a></li>
-        <li class="divider"></li>
-        <li><a href="#">Separated link</a></li>
+        <li><a class="dropdown-item" href="#">Action</a></li>
+        <li><a class="dropdown-item" href="#">Another action</a></li>
+        <li><a class="dropdown-item" href="#">Something else here</a></li>
+        <li><hr class="dropdown-divider"></li>
+        <li><a class="dropdown-item" href="#">Separated link</a></li>
       </ul>
     </li>
   </ul>
   <br>
 {% highlight html %}
 <ul class="nav nav-tabs">
-  <li class="active"><a href="#">Home</a></li>
-  <li><a href="#">Profile</a></li>
-  <li class="dropdown">
-    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+  <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+  <li class="nav-item"><a class="nav-link" href="#">Profile</a></li>
+  <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" href="#">
       Messages <span class="caret"></span>
     </a>
     <ul class="dropdown-menu" role="menu">
-      <li><a href="#">Action</a></li>
-      <li><a href="#">Another action</a></li>
-      <li><a href="#">Something else here</a></li>
-      <li class="divider"></li>
-      <li><a href="#">Separated link</a></li>
+      <li><a class="dropdown-item" href="#">Action</a></li>
+      <li><a class="dropdown-item" href="#">Another action</a></li>
+      <li><a class="dropdown-item" href="#">Something else here</a></li>
+      <li><hr class="dropdown-divider"></li>
+      <li><a class="dropdown-item" href="#">Separated link</a></li>
     </ul>
   </li>
 </ul>
 {% endhighlight %}
   <br />
 <ul class="nav nav-pills">
-  <li class="active"><a href="#">Home</a></li>
-  <li><a href="#">Profile</a></li>
-  <li class="dropdown">
-    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+  <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+  <li class="nav-item"><a class="nav-link" href="#">Profile</a></li>
+  <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#">
       Messages <span class="caret"></span>
     </a>
     <ul class="dropdown-menu" role="menu">
-      <li><a href="#">Action</a></li>
-      <li><a href="#">Another action</a></li>
-      <li><a href="#">Something else here</a></li>
-      <li class="divider"></li>
-      <li><a href="#">Separated link</a></li>
+      <li><a class="dropdown-item" href="#">Action</a></li>
+      <li><a class="dropdown-item" href="#">Another action</a></li>
+      <li><a class="dropdown-item" href="#">Something else here</a></li>
+      <li><hr class="dropdown-divider"></li>
+      <li><a class="dropdown-item" href="#">Separated link</a></li>
     </ul>
   </li>
 </ul>
 <br>
 {% highlight html %}
 <ul class="nav nav-pills">
-  <li class="active"><a href="#">Home</a></li>
-  <li><a href="#">Profile</a></li>
-  <li class="dropdown">
-    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+  <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+  <li class="nav-item"><a class="nav-link" href="#">Profile</a></li>
+  <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#">
       Messages <span class="caret"></span>
     </a>
     <ul class="dropdown-menu" role="menu">
-      <li><a href="#">Action</a></li>
-      <li><a href="#">Another action</a></li>
-      <li><a href="#">Something else here</a></li>
-      <li class="divider"></li>
-      <li><a href="#">Separated link</a></li>
+      <li><a class="dropdown-item" href="#">Action</a></li>
+      <li><a class="dropdown-item" href="#">Another action</a></li>
+      <li><a class="dropdown-item" href="#">Something else here</a></li>
+      <li><hr class="dropdown-divider"></li>
+      <li><a class="dropdown-item" href="#">Separated link</a></li>
     </ul>
   </li>
 </ul>
