--- a/docs/_includes/components/pagination.html
+++ b/docs/_includes/components/pagination.html
@@ -1,5 +1,5 @@
-<div class="box">
-  <h1 id="pagination">Pagination</h1>
+<div id="pagination" class="box">
+  <h1>Pagination</h1>
   <hr/>
 
   <div class="row">
