--- a/docs/_includes/components/progress-bar.html
+++ b/docs/_includes/components/progress-bar.html
@@ -1,5 +1,5 @@
-<div class="box">
-  <h1 id="progress-bar">Progress bar</h1>
+<div id="progress-bar" class="box">
+  <h1>Progress bar</h1>
   <hr/>
 
   <h2>Basic</h2>
