--- a/docs/_includes/components/supported-controls.html
+++ b/docs/_includes/components/supported-controls.html
@@ -1,5 +1,5 @@
-<div class="box">
-  <h1 id="supported-controls">Supported controls</h1>
+<div id="supported-controls" class="box">
+  <h1>Supported controls</h1>
   <hr/>
 
   <h2>Inputs</h2>
