--- a/docs/_includes/components/tables.html
+++ b/docs/_includes/components/tables.html
@@ -1,5 +1,5 @@
-<div class="box">
-  <h1 id="tables">Tables</h1>
+<div id="tables" class="box">
+  <h1>Tables</h1>
   <hr/>
   <h2>Single line</h2>
   <table class="table table-dashboard">
