--- a/docs/_includes/components/validation-states.html
+++ b/docs/_includes/components/validation-states.html
@@ -1,5 +1,5 @@
-<div class="box">
-  <h1 id="validation-states">Validation states</h1>
+<div id="validation-states" class="box">
+  <h1>Validation states</h1>
   <hr/>
 
   <div class="bs-example">
