--- a/docs/_includes/style/apple-touch-icons.html
+++ b/docs/_includes/style/apple-touch-icons.html
@@ -1,5 +1,5 @@
-<div class="box apple-touch-icons">
-  <h1 id="apple-touch-icons">Apple touch icons</h1>
+<div id="apple-touch-icons" class="box apple-touch-icons">
+  <h1>Apple touch icons</h1>
   <!-- <hr/> -->
 
   <div class="row">
