--- a/docs/_includes/style/colors.html
+++ b/docs/_includes/style/colors.html
@@ -1,5 +1,5 @@
-<div class="box colors">
-  <h1 id="colors">Colors</h1>
+<div id="colors" class="box colors">
+  <h1>Colors</h1>
   <hr/>
 
   <div class="row">
