--- a/docs/_includes/style/favicons.html
+++ b/docs/_includes/style/favicons.html
@@ -1,5 +1,5 @@
-<div class="box favicons">
-  <h1 id="favicons">Favicon</h1>
+<div id="favicons" class="box favicons">
+  <h1>Favicon</h1>
   <!-- <hr/> -->
 
   <div class="row">
