--- a/docs/_includes/style/icons.html
+++ b/docs/_includes/style/icons.html
@@ -1,5 +1,5 @@
-<div class="box icons">
-  <h1 id="icons">Icons</h1>
+<div id="icons" class="box icons">
+  <h1>Icons</h1>
   <!-- <hr/> -->
 
   <div class="row">
