--- a/docs/_includes/style/logo-usage.html
+++ b/docs/_includes/style/logo-usage.html
@@ -1,5 +1,5 @@
-<div class="box logo-usage">
-  <h1 id="logo-usage">Logo usage</h1>
+<div id="logo-usage" class="box logo-usage">
+  <h1>Logo usage</h1>
   <hr/>
   <p>The Gengo logotype is custom-designed to embody many of the aspirational qualities of the brand. The letterforms are highly efficient and based on oval shapes with subtly contrasted stroke weight. The "g" and "e" blend into the background as the letters adapt to any environment they are placed in.</p>
 
