--- a/docs/_includes/style/typography.html
+++ b/docs/_includes/style/typography.html
@@ -1,5 +1,5 @@
-<div class="box typography">
-  <h1 id="typography">Typography</h1>
+<div id="typography" class="box typography">
+  <h1>Typography</h1>
   <hr/>
 
   <div class="headers">
