--- a/docs/_includes/voice/brand-character.html
+++ b/docs/_includes/voice/brand-character.html
@@ -1,5 +1,5 @@
-<div class="box brand-character">
-  <h1 id="brand-character">Brand character</h1>
+<div id="brand-character" class="box brand-character">
+  <h1>Brand character</h1>
   <hr/>
 
   <div class="row">
