--- a/docs/_includes/voice/brand-statements.html
+++ b/docs/_includes/voice/brand-statements.html
@@ -1,5 +1,5 @@
-<div class="box brand-statements">
-  <h1 id="brand-statements">Brand statements</h1>
+<div id="brand-statements" class="box brand-statements">
+  <h1>Brand statements</h1>
   <hr/>
 
   <h3>Communicate freely.</h3>
