--- a/docs/_includes/voice/core-values.html
+++ b/docs/_includes/voice/core-values.html
@@ -1,5 +1,5 @@
-<div class="box core-values">
-  <h1 id="core-values">Core values</h1>
+<div id="core-values" class="box core-values">
+  <h1>Core values</h1>
   <hr/>
 
   <h3>Less, but better</h3>
