--- a/docs/_includes/voice/style-guide.html
+++ b/docs/_includes/voice/style-guide.html
@@ -1,5 +1,5 @@
-<div class="box style-guide">
-  <h1 id="style-guide">Style guide</h1>
+<div id="style-guide" class="box style-guide">
+  <h1>Style guide</h1>
   <hr/>
 
   <h2>Spelling</h2>
@@ -151,15 +151,15 @@
     </li>
   </ul>
 
-<h2>Use this, not that</h2>
-<ul>
-  <li>Don’t use the word “immediately” in reference to translation times</li>
-  <li>Don't put two spaces in between sentences</li>
-  <li>Don't use technical terminology without explaining it</li>
-  <li>Double-check company and product name capitalization (see below)</li>
-</ul>
+  <h2>Use this, not that</h2>
+  <ul>
+    <li>Don’t use the word “immediately” in reference to translation times</li>
+    <li>Don't put two spaces in between sentences</li>
+    <li>Don't use technical terminology without explaining it</li>
+    <li>Double-check company and product name capitalization (see below)</li>
+  </ul>
 
-<table class="table">
+  <table class="table">
     <thead>
       <tr>
         <th>Use this</th>
