--- a/docs/_includes/voice/users.html
+++ b/docs/_includes/voice/users.html
@@ -1,5 +1,5 @@
-<div class="box users">
-  <h1 id="users">Users</h1>
+<div id="users" class="box users">
+  <h1>Users</h1>
   <hr/>
 
   <p>All users are important, and our communications should reflect this. If you’re talking about system-wide changes, say “improve your Gengo experience” or “improve the user experience,” not “improve the customer experience.”</p>
