--- a/docs/_includes/voice/voice-and-tone.html
+++ b/docs/_includes/voice/voice-and-tone.html
@@ -1,5 +1,5 @@
-<div class="box voice-and-tone">
-  <h1 id="voice-and-tone">Voice and tone</h1>
+<div id="voice-and-tone" class="box voice-and-tone">
+  <h1>Voice and tone</h1>
   <hr/>
 
   <p>Getting the right tone of voice means Gengo customers recognize us as an efficient and solid service and authority on globalization, localization and translation. For translators, it means we are seen as a fair and reliable company and the definitive place to grow as a language enthusiast.</p>
