--- a/scss/gengo-bootstrap-theme.scss
+++ b/scss/gengo-bootstrap-theme.scss
@@ -1,3 +1,7 @@
-@import "third_party/bootstrap/bootstrap";
-@import "functions";
 @import "variables";
+@import "third_party/bootstrap/bootstrap";
+
+@import "navbar";
+@import "nav";
+@import "type";
+@import "grid";
