--- a/docs/_includes/_template/back-to-top-btn.html
+++ b/docs/_includes/_template/back-to-top-btn.html
@@ -1,3 +1,3 @@
-<div id="back-to-top" class="affix">
+<div id="back-to-top" class="sticky-bottom">
   <a href="#top">Back to Top<i class="icon-top"></i></a>
 </div>
