--- a/docs/_includes/components/alerts.html
+++ b/docs/_includes/components/alerts.html
@@ -1,5 +1,5 @@
-<div class="box alerts-examples">
-  <h1 id="alerts">Alerts</h1>
+<div id="alerts" class="box alerts-examples">
+  <h1>Alerts</h1>
   <hr/>
 
   <div class="bs-example" style="width:380px;">
