--- a/docs/_includes/components/buttons-dropdowns.html
+++ b/docs/_includes/components/buttons-dropdowns.html
@@ -1,5 +1,5 @@
-<div class="box">
-  <h1 id="buttons-dropdowns">Buttons dropdowns</h1>
+<div id="buttons-dropdowns" class="box">
+  <h1>Buttons dropdowns</h1>
   <hr/>
   <h2 id="btn-dropdowns-single">Single button dropdowns</h2>
     <div class="btn-group">
