--- a/docs/_includes/style/doctype-icons.html
+++ b/docs/_includes/style/doctype-icons.html
@@ -1,5 +1,5 @@
-<div class="box doctype">
-  <h1 id="doctype-icons">Doctype icons</h1>
+<div id="doctype-icons" class="box doctype">
+  <h1>Doctype icons</h1>
   <!-- <hr/> -->
 
   <div class="row">
