--- a/docs/_includes/style/introduction.html
+++ b/docs/_includes/style/introduction.html
@@ -1,5 +1,5 @@
-<div class="box">
-  <h1 id="introduction">Introducing the Gengo Style Guide</h1>
+<div id="introduction" class="box">
+  <h1>Introducing the Gengo Style Guide</h1>
   <hr/>
   <p>Since our founding in 2008, the web and its technology have changed significantly. In that time our product has grown organically as well, making it a challenge for us to scale at speed in all areas of our platform.</p>
   <p>To carry us into the future, we’ve created a style guide. This guide will help us build consistently and quickly without needing oversight for every pixel and will also help us focus more on workflows and logic rather than bits and pieces like buttons and list items. This style guide outlines:</p>
