--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -1,10 +1,5 @@
-@use "sass:math";
 @use "sass:map";
 
-// centered columns styles
-.row-centered {
-  text-align: center;
-}
 .col-centered {
   display: inline-block;
   float: none;
@@ -15,12 +10,12 @@
 }
 
 .box {
-  padding-right: math.div($grid-gutter-width, 2);
-  padding-left: math.div($grid-gutter-width, 2);
+  padding-right: calc($grid-gutter-width / 2);
+  padding-left: calc($grid-gutter-width / 2);
   padding-bottom: 21px;
   border: 1px solid #dbdbdb;
   border-radius: 3px;
-  background-color: $box-shadow;
+  background-color: $box-bg;
   margin-bottom: 36px;
 
   @media (min-width: map.get($grid-breakpoints, "md")) {
@@ -45,7 +40,7 @@
 }
 @media (min-width: map.get($grid-breakpoints, "md")) {
   [class*="col-"] {
-    padding-right: math.div($grid-gutter-width, 2);
-    padding-left: math.div($grid-gutter-width, 2);
+    padding-right: calc($grid-gutter-width / 2);
+    padding-left: calc($grid-gutter-width / 2);
   }
 }
