--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,3 +1,252 @@
+// == migrated from old navbar.scss
+//
+// Mixins
+// --------------------------------------------------
+
+@mixin navbar-base($bg-color, $hover-color) {
+  @media (max-width: $grid-float-breakpoint-max) {
+    background-color: $bg-color;
+  }
+  .navbar-nav {
+    .open a,
+    .active a,
+    a:focus,
+    a:hover {
+      border-bottom-color: $bg-color;
+
+      @media (max-width: $grid-float-breakpoint-max) {
+        background-color: $hover-color;
+      }
+    }
+  }
+  .navbar-brand {
+    background-color: $bg-color;
+  }
+}
+
+@mixin vertical-align ($height, $parent-height: $navbar-height) {
+  padding-top: ($parent-height - $height) * .5 + .5 !important;
+  padding-bottom: ($parent-height - $height) * .5 - .5 !important;
+  font-size: $height;
+  line-height: $height;
+}
+
+//
+// Navbar common
+// --------------------------------------------------
+
+$navbar-background-color: #fff !default;
+$hover-dark-gray: #413c38 !default;
+
+.navbar {
+  @include navbar-base($brand-customer, #199b71);
+  border-bottom: 1px solid $table-border-color;
+  margin-bottom: $navbar-margin-bottom;
+
+  @media (min-width: $grid-float-breakpoint-max) {
+    background-color: $navbar-background-color;
+  }
+
+  .container-fluid {
+    padding-left: 0;
+  }
+
+  .navbar-brand {
+    padding: 16px 28px 10px;
+    margin-right: 14px;
+    background-color: $brand-customer;
+    height: 48px;
+
+    @media (min-width: $grid-float-breakpoint-max) {
+      padding: 16px 28px 10px;
+    }
+
+    &:before {
+      display: block;
+      width: 59px;
+      height: 20px;
+      content: "";
+      background-image: url("../images/logo_gengo.svg");
+      background-repeat: no-repeat;
+      background-size: 59px 20px;
+    }
+  }
+  .navbar-toggle {
+    margin-top: 9px;
+
+    .icon-bar {
+      background-color: #fff;
+      width: 16px;
+      border-radius: 0;
+
+      + .icon-bar {
+        margin-top: 3px;
+      }
+    }
+  }
+
+  .btn {
+    padding: 4.5px $padding-base-x;
+    margin: 9px 0;
+    font-size: 13px;
+  }
+  p,
+  p > a {
+    color: $gengo-gray-light;
+  }
+}
+
+@media (min-width: $grid-float-breakpoint-max) {
+  .navbar-collapse .navbar-nav > li > a {
+    padding: 13px 0 10px;
+    padding-bottom: $navbar-padding-y - $navbar-btn-border-bottom;
+    margin: 0 17px;
+    color: $body-color;
+    border-bottom: solid $navbar-btn-border-bottom $navbar-background-color;
+    transition: border-bottom-color .3s ease;
+    line-height: 21px;
+  }
+}
+// On mobile/tablet
+@media (max-width: $grid-float-breakpoint-max) {
+  .navbar-collapse {
+    box-shadow: none;
+
+    .navbar-nav {
+      li a,
+      .dropdown-menu li a {
+        color: #fff;
+        font-weight: $font-weight-semibold;
+        padding-top: 8px;
+        padding-bottom: 8px;
+      }
+      .dropdown-menu {
+        padding: 0;
+      }
+    }
+  }
+  .nav {
+    a {
+      margin-left: 16px;
+      margin-right: 16px;
+      border-radius: $border-radius-sm;
+    }
+  }
+}
+
+
+// ------ navbar dropdown  ---------------------------------------
+
+.navbar-collapse .nav .dropdown {
+
+  &.open {
+    .dropdown-toggle {
+      border-bottom-left-radius: 0;
+      border-bottom-right-radius: 0;
+    }
+    > a {
+      border-color: transparent;
+    }
+  }
+  > a:hover,
+  > a:focus,
+  > a:active {
+    border-bottom-color: $table-border-color;
+  }
+
+  .dropdown-menu > li > a {
+    border-radius: 0;
+
+    @media (max-width: $grid-float-breakpoint-max) {
+      padding-left: 36px;
+    }
+  }
+
+
+}
+
+
+//
+// Customer
+// --------------------------------------------------
+
+.customer .navbar {
+  @include navbar-base($brand-customer, #199b71);
+}
+
+.translator .navbar,
+.developer .navbar,
+.admin .navbar {
+  .navbar-brand {
+    padding-right: 18px;
+    padding-left: 18px;
+
+    @media (min-width: $grid-float-breakpoint-max) {
+      padding-right: 30px;
+      padding-left: 30px;
+    }
+  }
+}
+
+//
+// Translator
+// --------------------------------------------------
+
+.translator .navbar {
+  @include navbar-base($brand-translator, #89c1b7);
+
+  .navbar-brand {
+    @include vertical-align(26px);
+
+    &:before {
+      width: 26px;
+      height: 26px;
+      background-image: url("../images/logo_translator.svg");
+      background-size: 26px 26px;
+    }
+  }
+}
+
+//
+// Developer
+// --------------------------------------------------
+
+.developer .navbar {
+  @include navbar-base($brand-developer, #d25440);
+
+  .navbar-brand {
+    @include vertical-align(26px);
+
+    &:before {
+      width: 26px;
+      height: 26px;
+      background-image: url("../images/logo_developer.svg");
+      background-size: 26px 26px;
+    }
+  }
+}
+
+//
+// Admin
+// --------------------------------------------------
+
+.admin .navbar {
+  @include navbar-base($brand-admin, $hover-dark-gray);
+
+  .navbar-brand {
+    @include vertical-align(27px);
+
+    &:before {
+      width: 27px;
+      height: 27px;
+      background-image: url("../images/logo_admin.svg");
+      background-size: 27px 27px;
+    }
+  }
+}
+
+// == old navbar.scss
+/*
 //
 // Mixins
 // --------------------------------------------------
@@ -79,7 +328,7 @@ $hover-dark-gray: #413c38 !default;
   }
 
   .btn {
-    padding: 4.5px $padding-base-horizontal;
+    padding: 4.5px $padding-base-x;
     margin: 9px 0;
     font-size: 13px;
   }
@@ -421,3 +670,4 @@ $workbench-icon-active-color: #fff !default;
 .navbar-form {
   @include navbar-vertical-align($input-height-small);
 }
+*/
