--- a/scss/_type.scss
+++ b/scss/_type.scss
@@ -1,4 +1,31 @@
-@use "sass:math";
+// Headings
+// -------------------------
+h1 { font-size: 30px; }
+h2 { font-size: 24px; }
+h3 { font-size: 18px; }
+
+.box h1, .box .h1,
+.box h2, .box .h2,
+.box h3, .box .h3 {
+  margin-top: $line-height-computed;
+  margin-bottom: calc($line-height-computed / 2);
+
+  small,
+  .small {
+    font-size: 65%;
+  }
+}
+.box h4, .box .h4,
+.box h5, .box .h5,
+.box h6, .box .h6 {
+  margin-top: calc($line-height-computed / 2);
+  margin-bottom: calc($line-height-computed / 2);
+
+  small,
+  .small {
+    font-size: 75%;
+  }
+}
 
 // Body text
 // -------------------------
@@ -28,7 +55,7 @@ ol {
 }
 
 blockquote {
-  margin: 0 0 (math.div($grid-gutter-width, 2)) math.div($grid-gutter-width, 2);
-  padding: 0 math.div($grid-gutter-width, 2);
-  border-left: 3px solid $blockquote-footer-color;
+  margin: 0 0 calc($grid-gutter-width / 2) calc($grid-gutter-width / 2);
+  padding: 0 calc($grid-gutter-width / 2);
+  border-left: 3px solid $blockquote-border-color;
 }
